--- a/framework/styles/sass/_reset.sass
+++ b/framework/styles/sass/_reset.sass
@@ -6,6 +6,7 @@ body
   margin: 0
 
 body
+  color: $b-80
   font-family: "ProximaNova", "Open Sans", sans-serif
   line-height: 1.35
   +font-smooth
