--- a/framework/styles/sass/_typography.sass
+++ b/framework/styles/sass/_typography.sass
@@ -1,3 +1,5 @@
-/*-------------------------*\
- * FONT-SIZES
-/*-------------------------*/
+.body
+  .title
+    font-size: 14px
+    font-weight: 600
+    text-transform: uppercase
