--- a/framework/styles/sass/_colors.sass
+++ b/framework/styles/sass/_colors.sass
@@ -30,6 +30,10 @@ $w: rgb(255, 255, 255)
 // UI
 $blue: rgb(67, 131, 187)
 $blue--link: rgb(41, 144, 234)
+$blue--light: rgb(122, 193, 255)
+
+$orange: rgb(255, 143, 46)
+$orange--light: rgb(255, 233, 213)
 
 // SOCIAL COLORS
 $facebook: rgb(57, 87, 157)
@@ -38,3 +42,20 @@ $twitter-light: rgb(229, 247, 253)
 $google: rgb(220, 74, 56)
 $pinterest: rgb(202, 31, 36)
 $linkedin: rgb(0, 151, 188)
+
+// APPS
+$mailchimp: rgb(119, 207, 242)
+
+// CODE
+.punctuation
+  color: $b-45
+
+.string
+  color: rgb(70, 193, 72)
+
+.boolean
+  &--true
+    color: rgb(70, 193, 72)
+
+  &--false
+    color: rgb(224, 80, 80)
