--- a/framework/styles/sass/_grid.sass
+++ b/framework/styles/sass/_grid.sass
@@ -1,6 +1,9 @@
 .container
   +container($global-width, 20px)
 
+  +min-width(960px)
+    margin-top: 20px
+
 .sidebar
   display: none
   
@@ -20,7 +23,7 @@
     width: 80%
 
   .body
-    padding: 20px
+    padding: 20px 15px
 
     +min-width(960px)
-      padding: 40px
+      padding: 40px 35px
