--- a/framework/styles/sass/_navigation.sass
+++ b/framework/styles/sass/_navigation.sass
@@ -65,3 +65,11 @@
     &:hover,
     &.active
       color: $blue--link
+
+  &--snippet
+    display: inline-block
+    padding: 0 7px
+    color: $blue--link
+    font-size: 12px
+    font-weight: 600
+    text-transform: uppercase
