--- a/framework/styles/sass/_prefixr.sass
+++ b/framework/styles/sass/_prefixr.sass
@@ -100,7 +100,7 @@
 /*-------------------------*\
  * BOX-SHADOW
 /*-------------------------*/
-=box-shadow($shadow)
+=box-shadow($shadow...)
   +webkit
     -webkit-box-shadow: $shadow
   +moz
