--- a/framework/styles/sass/app.sass
+++ b/framework/styles/sass/app.sass
@@ -9,9 +9,10 @@
 @import reset
 
 @import fonts
+@import icons
+@import rating
 @import typography
 
-@import icons
 
 @import globals
 @import navigation
@@ -20,6 +21,7 @@
 @import forms
 
 @import grid
+@import elements
 @import headers
 @import modals
 
