--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -47,6 +47,12 @@
     padding: $padding 0
 
 /*-------------------------*\
+ * SHADOW HOVER
+/*-------------------------*/
+=shadow
+  +box-shadow(0 1px 2px 0 $b-05,0 4px 8px 0 $b-10)
+
+/*-------------------------*\
  * COVERS
 /*-------------------------*/
 =cover($height)
@@ -54,6 +60,23 @@
   min-height: 300px
   height: $height
   +transition(height 333ms)
+
+/*-------------------------*\
+ * APP CARD ICON
+/*-------------------------*/
+=app-card-icon($bg-color: $w)
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  +border-radius(5px)
+  +box-shadow(inset 0 0 0 1px $b-10)
+  background-size: 45%
+  background-position: center
+  background-repeat: no-repeat
+  background-color: $bg-color
+  overflow: hidden
 
 /*-------------------------*\
  * BACKGROUND COVERS
@@ -91,10 +114,7 @@
   text-align: center
 
   +min-width(960px)
-    font-size: $font-size * 1.33
-
-  +min-width(1280px)
-    font-size: $font-size * 1.5
+    font-size: $font-size * 1.278
 
 =bg-subtitle($top: 60%, $color: null, $font-size: 18px)
   position: absolute
@@ -103,6 +123,7 @@
   +translateY(-50%)
   color: $color
   font-size: $font-size
+  font-weight: 400
   text-align: center
   letter-spacing: 1px
 
