--- a/framework/styles/sass/_globals.sass
+++ b/framework/styles/sass/_globals.sass
@@ -4,6 +4,9 @@
 .ez
   background-color: $b-025
 
+.noscroll
+  overflow: hidden
+
 /*-------------------------*\
  * DIVIDERS
 /*-------------------------*/
