--- a/framework/styles/sass/_icons.sass
+++ b/framework/styles/sass/_icons.sass
@@ -5,7 +5,7 @@ $icons-prefix: "w-icon-"
     display: inline-block
     font-family: "wicons"
     font-style: normal
-    font-weight: 400
+    font-weight: $regular
     font-variant: normal
     line-height: 1.35
     speak: none
