--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -43,9 +43,6 @@
   padding: $padding
   margin: auto
 
-  +min-width($global-width + $padding * 2)
-    padding: $padding 0
-
 /*-------------------------*\
  * SHADOW HOVER
 /*-------------------------*/
@@ -123,7 +120,6 @@
   +translateY(-50%)
   color: $color
   font-size: $font-size
-  font-weight: 400
   text-align: center
   letter-spacing: 1px
 
@@ -136,7 +132,7 @@
     display: inline-block
     font-family: "wicons"
     font-style: normal
-    font-weight: 400
+    font-weight: $regular
     font-variant: normal
     speak: none
     text-decoration: inherit
