--- a/framework/styles/sass/_prefixr.sass
+++ b/framework/styles/sass/_prefixr.sass
@@ -22,7 +22,7 @@
 /*-------------------------*\
  * VISIBILITY
 /*-------------------------*/
-=backface-visibility($visibility)
+=backface-visibility($visibility: hidden)
   +webkit
     -webkit-backface-visibility: $visibility
   +moz
