--- a/framework/styles/sass/_colors.sass
+++ b/framework/styles/sass/_colors.sass
@@ -28,9 +28,18 @@ $w-98: rgba(255, 255, 255, 0.98)
 $w: rgb(255, 255, 255)
 
 // UI
-$blue: rgb(67, 131, 187)
-$blue--link: rgb(41, 144, 234)
-$blue--light: rgb(122, 193, 255)
+$gray--lightest: rgb(248,248,248)
+$gray--lighter: rgb(212,213,214)
+$gray--light: rgb(183,187,189)
+$gray: rgb(155,160,163)
+$gray--dark: rgb(102,108,112)
+$gray--darker: rgb(54,59,62)
+
+$blue--lighter: rgb(246,251,255)
+$blue--light: rgb(122,193,255)
+$blue: rgb(41,144,234)
+$blue--dark: rgb(38,129,209)
+$blue--darker: rgb(24,82,133)
 
 $orange: rgb(255, 143, 46)
 $orange--light: rgb(255, 233, 213)
