--- a/framework/styles/sass/_reset.sass
+++ b/framework/styles/sass/_reset.sass
@@ -6,7 +6,7 @@ body
   margin: 0
 
 body
-  color: $b-80
+  color: $gray--darker
   font-family: "ProximaNova", "Open Sans", sans-serif
   font-size: 16px
   line-height: 1.35
@@ -51,6 +51,7 @@ h5,
 h6
   padding: 0
   margin: 0
+  font-weight: $regular
 
 b,
 strong
